# Intelligent_Design_of_circuit

./: .gitignore  LICENSE  README.md  circuit.ipynb  circuit.py  pyproject.toml
scripts/: AE.py  forward.py  inv.py  inv_fixed_R.py
src/: dataset.py  plot.py  preprocessing.py
